--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="graphic-design-container">
                     <div class="skill-heading-icon-container">
                         <img class="main-skill-icon" src="icons/graphic_design_icon_black.png">
-                        <h3>Graphic Design</h3>
+                        <h3 class="skills-text">Graphic Design</h3>
                     </div>
                     <div class="art-skills-container">
                         <div class="skill-icon-container">
@@ -84,7 +84,7 @@
                 <div class="web-software-dev-container">
                     <div class="skill-heading-icon-container">
                         <img class="main-skill-icon" src="icons/dev_icon_black.png">
-                        <h3>Web / Software Development</h3>
+                        <h3 class="skills-text">Web / Software Development</h3>
                     </div>
                     <div class="skills-container">
                         <div class="skill-icon-container">
