changed button colors and swapped dev/graphic design

--- a/index.html
+++ b/index.html
@@ -82,25 +82,6 @@
                 </div>
             </div>
             <div class="main-skills-container">
-                <div class="graphic-design-container">
-                    <div class="skill-heading-icon-container">
-                        <img class="main-skill-icon" src="icons/graphic_design_icon_black.png">
-                        <h3 class="skills-text">Graphic Design</h3>
-                    </div>
-                    <div class="art-skills-container">
-                        <div class="skill-icon-container">
-                            <i class="devicon-photoshop-plain"></i>
-                            <p class="skill-name">Photoshop</p>
-                        </div>
-                        <div class="skill-icon-container">
-                            <i class="devicon-illustrator-plain"></i>
-                            <p class="skill-name">Illustrator</p>
-                        </div>
-                    </div>
-                    <div class="portfolio-button-container">
-                        <button onclick="window.open('https://drive.google.com/drive/folders/1jVvGFluAR_R-R4SANP2vENLMiVWkCR1y?usp=sharing')">Portfolio</button>
-                    </div>
-                </div>
                 <div class="web-software-dev-container">
                     <div class="skill-heading-icon-container">
                         <img class="main-skill-icon" src="icons/dev_icon_black.png">
@@ -130,6 +111,25 @@
 
                     </div>
                     <h3 id="message"> See below for my projects </h3>                   
+                </div>
+                <div class="graphic-design-container">
+                    <div class="skill-heading-icon-container">
+                        <img class="main-skill-icon" src="icons/graphic_design_icon_black.png">
+                        <h3 class="skills-text">Graphic Design</h3>
+                    </div>
+                    <div class="art-skills-container">
+                        <div class="skill-icon-container">
+                            <i class="devicon-photoshop-plain"></i>
+                            <p class="skill-name">Photoshop</p>
+                        </div>
+                        <div class="skill-icon-container">
+                            <i class="devicon-illustrator-plain"></i>
+                            <p class="skill-name">Illustrator</p>
+                        </div>
+                    </div>
+                    <div class="portfolio-button-container">
+                        <button onclick="window.open('https://drive.google.com/drive/folders/1jVvGFluAR_R-R4SANP2vENLMiVWkCR1y?usp=sharing')">View Portfolio</button>
+                    </div>
                 </div>
                 
             </div>
