fixed github icon again

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><div class="table-icon-container"><i class="devicon-github-plain"></i></div></td>
+                                <td><div class="table-icon-container"><span class="devicon-github-plain"></span></div></td>
                                 <td class="table-button-container">
                                     <button class="icon-button"
                                         onclick="window.open('https://github.com/JanRoces')">
