fixed mastermind git link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     
                     <div class="project-button-container">
                         <button id="mastermind-git-button" class="project-button"
-                            onclick="window.open('https://github.com/JanRoces/splitsy')">Git</button>
+                            onclick="window.open('https://github.com/JanRoces/mastermind')">Git</button>
                     </div>
                 </div>
                 <div class="project-list">
