added color of your brain project

--- a/index.html
+++ b/index.html
@@ -139,6 +139,25 @@
             <h3 id="projects">Projects</h3>
             <div class="projects-container">
                 <div class="project-list">
+                    <img src="project_images/color.png">
+                    <div class="project-label">
+                        <label><b>Color of Your Brain</b> (JavaScript, ReactJS, HTML, CSS)</label>
+                    </div>
+                    <div class="project-description-container">
+                        <p class="project-description">
+                            Color of Your Brain is a web game that tests your brain with colors.
+                            The user will have 3 seconds to select the correct word of the corresponding
+                            color. 
+                        </p>
+                    </div>
+                    <div class="project-button-container">
+                        <button id="splitsy-app-button" class="project-button" 
+                            onclick="window.open('https://janroces.github.io/color-of-your-brain')">App</button>
+                        <button id="splitsy-git-button" class="project-button"
+                        onclick="window.open('https://github.com/JanRoces/color-of-your-brain')">Git</button>
+                    </div>
+                </div>
+                <div class="project-list">
                     <img src="project_images/splitsy.png">
                     <div class="project-label">
                         <label><b>Splitsy</b> (JavaScript, ReactJS, HTML, CSS)</label>
@@ -152,7 +171,7 @@
                         </p>
                     </div>
                     <div class="project-button-container">
-                        <button id="splitsy-app-button" class="project-button" 
+                        <button id="color-app-button" class="project-button" 
                             onclick="window.open('https://janroces.github.io/splitsy/')">App</button>
                         <button id="splitsy-git-button" class="project-button"
                         onclick="window.open('https://github.com/JanRoces/splitsy')">Git</button>
