--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="profile-container">
                 <div class="profile-info">
                     <div class="profile-picture-container">
-                        <img class="profile-picture" src="icons/avatar.png"></img>
+                        <img class="profile-picture" src="icons/avatar2.png"></img>
                     </div>
                     <div class="profile-links">
                         <h1>Jan Roces</h1>
