fixed proj images going over container

--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
                 <div class="project-list">
                     <img src="project_images/color.png">
                     <div class="project-label">
-                        <label><b>Color of Your Brain</b> (JavaScript, ReactJS, HTML, CSS)</label>
+                        <label><b>Color of Your Brain</b> </label>
+                    </div>
+                    <div>
+                        (JavaScript, ReactJS, HTML, CSS)
                     </div>
                     <div class="project-button-container">
                         <button id="splitsy-app-button" class="project-button" 
@@ -160,7 +163,10 @@
                 <div class="project-list">
                     <img src="project_images/splitsy.png">
                     <div class="project-label">
-                        <label><b>Splitsy</b> (JavaScript, ReactJS, HTML, CSS)</label>
+                        <label><b>Splitsy</b> </label>
+                    </div>
+                    <div>
+                        (JavaScript, ReactJS, HTML, CSS)
                     </div>
                     <div class="project-button-container">
                         <button id="color-app-button" class="project-button" 
@@ -180,7 +186,10 @@
                 <div class="project-list">
                     <img src="project_images/mastermind.png">
                     <div class="project-label">
-                        <label><b>Mastermind</b> (C++)</label>
+                        <label><b>Mastermind</b> </label>
+                    </div>
+                    <div>
+                        (C++)
                     </div> 
                     <div class="project-button-container">
                         <button id="mastermind-git-button" class="project-button"
@@ -199,7 +208,10 @@
                 <div class="project-list">
                     <img src="project_images/munchi.png">
                     <div class="project-label">
-                        <label><b>Munchi</b> (Android Studio, Java)</label>
+                        <label><b>Munchi</b> </label>
+                    </div>
+                    <div>
+                        (Android Studio, Java)
                     </div>
                     <div class="project-button-container">
                         <button id="munchi-app-button" class="project-button"
