edited about me

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
                         My very first exposure to programming and graphic design comes from 
                         using HTML and photoshop to create
                         my front page of the weblog and social networking sites: 
-                        Xanga and Myspace. Not knowing exactly what I was doing,
-                        programming became the perfect combination of my love for analytics
-                        and art.
+                        Xanga and Myspace. Coding became the perfect combination of my love 
+                        for problem solving and art.
                     </p>
                     <p>
                         I am originally from Honolulu, Hawaii and moved to Las Vegas, Nevada
