update about me

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                         teach myself web development and start to freelance graphic design.
                     </p>
                     <p>
+                        I am currently employed as an Associate Software Engineer and have
+                        experience as a QA Automation Engineer.
+                    </p>
+                    <p>
                         Thank you for your time.
                     </p>
                 </div>
