--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="main-container">
-            <div class="profile-container">
+            <div class="parent profile-container">
                 <div class="profile-info">
                     <div class="profile-picture-container">
                         <img class="profile-picture" src="icons/avatar2.png"></img>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="main-skills-container">
-                <div class="web-software-dev-container">
+                <div class="parent web-software-dev-container">
                     <div class="skill-heading-icon-container">
                         <img class="main-skill-icon" src="icons/dev_icon_black.png">
                         <h3 class="skills-text">Web / Software Development</h3>
@@ -115,7 +115,7 @@
                     </div>
                     <h3 id="message"> See below for my projects </h3>                   
                 </div>
-                <div class="graphic-design-container">
+                <div class="parent graphic-design-container">
                     <div class="skill-heading-icon-container">
                         <img class="main-skill-icon" src="icons/graphic_design_icon_black.png">
                         <h3 class="skills-text">Graphic Design</h3>
@@ -138,7 +138,7 @@
             </div>
         </div>
 
-        <div class="main-projects-container">
+        <div class="parent main-projects-container">
             <h3 id="projects">Projects</h3>
             <div class="projects-container">
                 <div class="project-list">
