--- a/index_v2.html
+++ b/index_v2.html
@@ -12,7 +12,7 @@
         <div class="main-container">
             <div class="container-profile fade-in-up">
                 <div class="container-profile-picture-">
-                    <img class="profile-picture" src="icons/avatar.png"></img>
+                    <img class="profile-picture" src="icons/avatar3.png"></img>
                 </div>
                 <div class="container-typing">
                     <div class="typing"><span id="typed-text"></span><span class="caret"></span></div>
