--- a/index_v2.html
+++ b/index_v2.html
@@ -64,6 +64,75 @@
                   Today, I work as a <span class="color-green">Software Engineer</span>, where I've led my team through numerous projects and feature launches,
                   bringing both <span class="color-green">leadership</span> and hands-on <span class="color-green">technical expertise</span> to the table.
               </div>
+              <div class="container-projects-content" id="projects-content">
+              <div class="container-technologies">
+                <div class="container-technology">
+                  <i class="devicon-cplusplus-plain"></i>
+                </div>
+                <div class="container-technology">
+                  <i class="fa-brands fa-js"></i>
+                </div>
+                <div class="container-technology">
+                  <i class="fa-brands fa-react"></i>
+                </div>
+                <div class="container-technology">
+                  <i class="fa-brands fa-html5"></i>
+                </div>
+                <div class="container-technology">
+                  <i class="fa-brands fa-css3-alt"></i>
+                </div>
+              </div>
+              <div class="card-project">
+                <img class="card-image" src="project_images/rainbow.png" onclick="window.open('https://janroces.github.io/rainbow-riddle/')">
+                <div class="card-content">
+                  <div class="card-label">
+                    Rainbow Riddle
+                  </div>
+                  <div class="card-description">
+                      A Wordle-like game where the user has 8 attempts to guess the secret
+                      color combination.
+                  </div>
+                </div>
+              </div>
+              <div class="card-project">
+                <img class="card-image" src="project_images/color.png" onclick="window.open('https://janroces.github.io/color-of-your-brain/')">
+                <div class="card-content">
+                  <div class="card-label">
+                    Color of Your Brain
+                  </div>
+                  <div class="card-description">
+                      A web game that tests your brain with colors.
+                      The user will have 3 seconds to select the correct word of the corresponding
+                      color.
+                  </div>
+                </div>
+              </div>
+              <div class="card-project">
+                <img class="card-image" src="project_images/splitsy.png" onclick="window.open('https://janroces.github.io/splitsy/')">
+                <div class="card-content">
+                  <div class="card-label">
+                    Splitsy
+                  </div>
+                  <div class="card-description">
+                    A web application that organizes finances for a group and
+                    evenly divides expenses and amount of debt owed to each participant.
+                  </div>
+                </div>
+              </div>
+              <div class="card-project">
+                <img class="card-image" src="project_images/mastermind.png" onclick="window.open('https://github.com/JanRoces/mastermind')">
+                <div class="card-content">
+                  <div class="card-label">
+                    Mastermind
+                  </div>
+                  <div class="card-description">
+                    A terminal game based on the 1972, two-player board game.
+                    The four color combination is randomly generated and you have to break the code.
+                  </div>
+                </div>
+              </div>
+
+              </div>
             </div>
         </div>
 
