update title icon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Jan Roces</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
-        <link rel="shortcut icon" href="icons/title_icon.png">
+        <link rel="shortcut icon" href="icons/title_icon_2.png">
         <script
           src="https://kit.fontawesome.com/5e94ba9257.js"
           crossorigin="anonymous"
