fix scrolling issue

--- a/index.html
+++ b/index.html
@@ -127,12 +127,9 @@
                     Mastermind
                   </div>
                   <div class="card-description">
-                    A terminal game based on the 1972, two-player board game.
-                    The four color combination is randomly generated and you have to break the code.
+                    A terminal-based adaptation of the 1972 two-player board game, where you try to crack a randomly generated four-color code.
                   </div>
                 </div>
-              </div>
-
               </div>
             </div>
         </div>
