create mobile nav bar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
 
     <body>
         <div class="main-container">
+            <div class="container-social-links-nav-bar stagger-prep">
+              <div class="container-social-link color-yellow" style="--i: 0"
+                onclick="window.open('https://drive.google.com/file/d/1oP6PgyIBOIWamON3jXP9siantfQ0ty9E/view?usp=sharing')"
+                >
+                <i class="fa-solid fa-paperclip"></i>
+              </div>
+              <div class="container-social-link color-blue" style="--i: 1"
+                onclick="window.open('https://www.linkedin.com/in/jan-roces-38ba011b3/')"
+                >
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+              <div class="container-social-link color-pink" style="--i: 2"
+                onclick="window.open('https://github.com/JanRoces')"
+                >
+                <i class="fa-brands fa-github"></i>
+              </div>
+              <div class="container-social-link color-green" style="--i: 3"
+                onclick="window.open('mailto:rocesjg@gmail.com')"
+                >
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+            </div>
             <div class="container-profile fade-in-up">
                 <div class="container-profile-picture-">
                     <img class="profile-picture" src="icons/avatar3.png"></img>
