make projects scrollable

--- a/index.html
+++ b/index.html
@@ -105,51 +105,53 @@
                   <i class="fa-brands fa-css3-alt"></i>
                 </div>
               </div>
-              <div class="card-project">
-                <img class="card-image" src="project_images/rainbow.png" onclick="window.open('https://janroces.github.io/rainbow-riddle/')">
-                <div class="card-content">
-                  <div class="card-label">
-                    Rainbow Riddle
-                  </div>
-                  <div class="card-description">
-                      A Wordle-like game where the user has 8 attempts to guess the secret
-                      color combination.
-                  </div>
-                </div>
-              </div>
-              <div class="card-project">
-                <img class="card-image" src="project_images/color.png" onclick="window.open('https://janroces.github.io/color-of-your-brain/')">
-                <div class="card-content">
-                  <div class="card-label">
-                    Color of Your Brain
-                  </div>
-                  <div class="card-description">
-                      A web game that tests your brain with colors.
-                      The user will have 3 seconds to select the correct word of the corresponding
-                      color.
+              <div class="container-projects">
+                <div class="card-project">
+                  <img class="card-image" src="project_images/rainbow.png" onclick="window.open('https://janroces.github.io/rainbow-riddle/')">
+                  <div class="card-content">
+                    <div class="card-label">
+                      Rainbow Riddle
+                    </div>
+                    <div class="card-description">
+                        A Wordle-like game where the user has 8 attempts to guess the secret
+                        color combination.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="card-project">
-                <img class="card-image" src="project_images/splitsy.png" onclick="window.open('https://janroces.github.io/splitsy/')">
-                <div class="card-content">
-                  <div class="card-label">
-                    Splitsy
-                  </div>
-                  <div class="card-description">
-                    A web application that organizes finances for a group and
-                    evenly divides expenses and amount of debt owed to each participant.
+                <div class="card-project">
+                  <img class="card-image" src="project_images/color.png" onclick="window.open('https://janroces.github.io/color-of-your-brain/')">
+                  <div class="card-content">
+                    <div class="card-label">
+                      Color of Your Brain
+                    </div>
+                    <div class="card-description">
+                        A web game that tests your brain with colors.
+                        The user will have 3 seconds to select the correct word of the corresponding
+                        color.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="card-project">
-                <img class="card-image" src="project_images/mastermind.png" onclick="window.open('https://github.com/JanRoces/mastermind')">
-                <div class="card-content">
-                  <div class="card-label">
-                    Mastermind
+                <div class="card-project">
+                  <img class="card-image" src="project_images/splitsy.png" onclick="window.open('https://janroces.github.io/splitsy/')">
+                  <div class="card-content">
+                    <div class="card-label">
+                      Splitsy
+                    </div>
+                    <div class="card-description">
+                      A web application that organizes finances for a group and
+                      evenly divides expenses and amount of debt owed to each participant.
+                    </div>
                   </div>
-                  <div class="card-description">
-                    A terminal-based adaptation of the 1972 two-player board game, where you try to crack a randomly generated four-color code.
+                </div>
+                <div class="card-project">
+                  <img class="card-image" src="project_images/mastermind.png" onclick="window.open('https://github.com/JanRoces/mastermind')">
+                  <div class="card-content">
+                    <div class="card-label">
+                      Mastermind
+                    </div>
+                    <div class="card-description">
+                      A terminal-based adaptation of the 1972 two-player board game, where you try to crack a randomly generated four-color code.
+                    </div>
                   </div>
                 </div>
               </div>
